--- a/MyApp2/app/src/main/res/layout/main.xml
+++ b/MyApp2/app/src/main/res/layout/main.xml
@@ -5,7 +5,7 @@
 
 	
     <TextView
-        android:text="@string/hello_world"
+        android:text="foobar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
